--- a/packages/pyxis-scss/src/scss/config.scss
+++ b/packages/pyxis-scss/src/scss/config.scss
@@ -1,18 +1,7 @@
-////
-/// Configuration is the only part of Pyxis which can be overridden by final user.
-/// Take a look to the documentation on extending Pyxis for your needs.
-/// @group CONFIGURATION
-////
+// Configuration is the only part of Pyxis which can be overridden by final user.
 
-/// Font size root
-///
-/// @type Number
-/// @access public
+// Font size root
 $fontSizeRoot: 16px !default;
 
-///
-/// Font display settings
-///
-/// @type String
-/// @access public
+// Font display settings
 $fontDisplay: swap !default;
