--- a/packages/pyxis-scss/src/scss/foundations/hiding.scss
+++ b/packages/pyxis-scss/src/scss/foundations/hiding.scss
@@ -1,43 +1,16 @@
-////
-/// Hiding Rules define all rules for hiding content based on device width.
-/// @group HIDING
-////
+// Hiding Rules define all rules for hiding content based on device width.
 
 @use "../lib";
 @use "breakpoints";
 @use "../tokens/breakpoints" as tokens;
 
-/// Hide an element from `$fromBreakpoint` to `$untilBreakpoint` value.
-/// Outside the indicated breakpoints the element will have the assigned display value.
-///
-/// @param {String} $fromBreakpoint - Name of start breakpoint
-/// @param {String} $untilBreakpoint - Name of end breakpoint
-///
-/// @output `display:none;` between breakpoints in input.
-///
-/// @example scss - Hide element for every breakpoint
-///  .element {
-///     @include hide();
-///  }
-///
-/// @example scss - Hide element from breakpoint medium
-///  .element {
-///     @include hide(medium);
-///     display: grid;
-///  }
-///  // Before medium breakpoint the display property is set 
-///  // to `grid`, after to `none`.
-///
-/// @example scss - Hide element between breakpoint small and large
-///  .element {
-///     @include hide(small, large);
-///     display: grid;
-///  }
-///  // Outside the range between small and large breakpoint the display property 
-///  // is set to `grid`, inside to `none`.
-///
-/// @throw Error if `$untilBreakpoint` is smaller or equal to `$fromBreakpoint`.
-/// @access public
+// Hide an element from `$fromBreakpoint` to `$untilBreakpoint` value.
+// Outside the indicated breakpoints the element will have the assigned display value.
+//
+// @param {String} $fromBreakpoint - Name of start breakpoint
+// @param {String} $untilBreakpoint - Name of end breakpoint
+//
+// @throw Error if `$untilBreakpoint` is smaller or equal to `$fromBreakpoint`.
 @mixin hide($fromBreakpoint: base, $untilBreakpoint: null) {
   @if(lib.isNotNull($untilBreakpoint) and breakpoints.isGreaterOrEqualTo($fromBreakpoint, $untilBreakpoint)) {
     @error "You cannot use a `$untilBreakpoint` value smaller or equal than `$fromBreakpoint` value";
@@ -48,10 +21,7 @@
   }
 }
 
-/// Create atom classes for hiding
-///
-/// @alias createAtoms
-/// @access public
+// Create atom classes for hiding
 @mixin createAtoms() {
   @each $breakpointName, $breakpointValue in tokens.$breakpoints {
     $append: if(breakpoints.isBase($breakpointName), "", "-from-#{$breakpointName}");
