--- a/packages/pyxis-scss/src/scss/pyxis.scss
+++ b/packages/pyxis-scss/src/scss/pyxis.scss
@@ -1,9 +1,9 @@
-/// Exposed methods and variables to be used in your SCSS source code.
-/// Check each module implementation to be aware of what is exposed.
+// Exposed methods and variables to be used in your SCSS source code.
+// Check each module implementation to be aware of what is exposed.
 @forward "foundations";
 @forward "components";
 @forward "lib";
 
-/// Pyxis foundations
+// Pyxis foundations
 @use "foundations" as pyxis;
 @use "atoms";
