--- a/packages/pyxis-scss/src/scss/components/forms/controls/checkbox.scss
+++ b/packages/pyxis-scss/src/scss/components/forms/controls/checkbox.scss
@@ -1,8 +1,3 @@
-////
-/// Generated classes for text field styling.
-/// @group COMPONENTS
-////
-
 @use "../../../foundations";
 @use "../../../lib";
 @use "../mixins";
@@ -11,13 +6,10 @@
 $_checkmarkIcon: "%3Csvg width='12' height='12' viewBox='0 0 12 12' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M10.4413 3.02222L3.78257 8.97764L1.55872 5.94636' fill='none' stroke='%%COLOR%%' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E";
 $_indeterminateIcon: "%3Csvg width='10' height='2' viewBox='0 0 10 2' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect x='-1' y='-5' width='12' height='12' fill='%%COLOR%%'/%3E%3C/svg%3E";
 
-/// Add a background image with a proper color.
-/// @param {String} $image - An svg with '%%COLOR%%' placeholder
-/// @param {Color} $color - Color name
-///
-/// @output Appropriate `box-image`.
-///
-/// @access private
+// Add a background image with a proper color.
+//
+// @param {String} $image - An svg with '%%COLOR%%' placeholder
+// @param {Color} $color - Color name
 @mixin _backgroundImage($image, $color: neutralLight) {
   $escapedColor: lib.stringReplace("#{foundations.color($color)}", "#", "%23");
   $svg: lib.stringReplace($image, "%%COLOR%%", $escapedColor);
@@ -25,37 +17,15 @@ $_indeterminateIcon: "%3Csvg width='10' height='2' viewBox='0 0 10 2' fill='none
   background-image: url("data:image/svg+xml,#{$svg}");
 }
 
-/// Set background and border color.
-/// @param {Color} $color - Color name
-/// @param {Color} $color2 [$color] - Color name for border
-///
-/// @output Appropriate `background-color` and `border-color`.
-///
-/// @access private
+// Set background and border color.
+//
+// @param {Color} $color - Color name
+// @param {Color} $color2 [$color] - Color name for border
 @mixin _color($backgroundColor, $borderColor: $backgroundColor) {
   background-color: foundations.color($backgroundColor);
   border-color: foundations.color($borderColor);
 }
 
-/// Set properties for styling checkbox.
-///
-/// @example scss - Checkbox
-///    <div class="form-control-group">
-///      <label class="form-control">
-///        <input type="checkbox" name="example" class="form-control__checkbox" />
-///        Checkbox
-///      </label>
-///      <label class="form-control">
-///        <input type="checkbox" name="example" class="form-control__checkbox" checked />
-///        Checkbox
-///      </label>
-///      <label class="form-control">
-///        <input type="checkbox" name="example" class="form-control__checkbox" indeterminate />
-///        Checkbox
-///      </label>
-///    </div>
-///
-/// @access public
 .form-control__checkbox {
   @include foundations.radius(2xs);
   @include mixins.fieldStateDefault;
