--- a/packages/pyxis-scss/src/scss/lib/_map.scss
+++ b/packages/pyxis-scss/src/scss/lib/_map.scss
@@ -1,36 +1,13 @@
-////
-/// Utilities for SCSS maps.
-/// @group LIB
-////
+// Utilities for SCSS maps.
 
-/// Retrieve the value corresponding to
-/// the key in a given map.
-///
-/// @param {Map} $map - A map
-/// @param {Args} $keys - Keys in map
-/// @return {Sass::Script::Value::Base} The corresponding value
-///
-/// @example scss - Retrieve brand base color from colors map
-///   $colors: (
-///     brandBase: #8334c2,
-///     brandDark: #5b2488,
-///     brandLight: #f2eaf8,
-///   );
-///   
-///   get($colors, brandBase)
-///   // #8334c2
-/// @example scss - Retrieve an unexpected color from colors map
-///   $colors: (
-///     brandBase: #8334c2,
-///     brandDark: #5b2488,
-///     brandLight: #f2eaf8,
-///   );
-///   
-///   get($colors, successColor)
-///   // ERROR: Unknown key `successColor` in map
-///
-/// @throw Error if `$keys` is not in map.
-/// @access public
+// Retrieve the value corresponding to
+// the key in a given map.
+//
+// @param {Map} $map - A map
+// @param {Args} $keys - Keys in map
+// @return {Sass::Script::Value::Base} The corresponding value
+//
+// @throw Error if `$keys` is not in map.
 @function get($map, $keys...) {
   @each $key in $keys {
     @if not map-has-key($map, $key) {
@@ -42,48 +19,25 @@
   @return $map;
 }
 
-/// Return the key corresponding to the index in input
-/// in a given map.
-///
-/// @param {Number} $index - The index
-/// @param {Map} $map - A map
-/// @return {String} The corresponding key
-///
-/// @example scss - Retrieve the key at index 5 in colors map
-///   $colors: (
-///     brandBase: #8334c2,
-///     brandDark: #5b2488,
-///     brandLight: #f2eaf8,
-///   );
-///
-///   indexToKey(2, $colors)
-///   // brandDark
-///
-/// @access public
+// Return the key corresponding to the index in input
+// in a given map.
+//
+// @param {Number} $index - The index
+// @param {Map} $map - A map
+// @return {String} The corresponding key
 @function indexToKey($index, $map) {
   $keys: map-keys($map);
   @return nth($keys, $index);
 }
 
-/// Return the key of the element with the
-/// index following the item in input in a given map.
-///
-/// @param {Map} $map - A map
-/// @param {String} $currentItem - The current item (Key value)
-/// @return {String:Null} The corresponding key or null
-///
-/// @example scss - Retrieve the key of the item next to `actionDark` in colors map
-///   $colors: (
-///     brandBase: #8334c2,
-///     brandDark: #5b2488,
-///     brandLight: #f2eaf8,
-///   );
-///
-///   getNextElementKey($colors, brandDark #5b2488)
-///   // brandLight
-///
-/// @throw Error if `$currentItem` is not in map.
-/// @access public
+// Return the key of the element with the
+// index following the item in input in a given map.
+//
+// @param {Map} $map - A map
+// @param {String} $currentItem - The current item (Key value)
+// @return {String:Null} The corresponding key or null
+//
+// @throw Error if `$currentItem` is not in map.
 @function getNextElementKey($map, $currentItem) {
   $currentIndex: index($map, $currentItem);
   @if $currentIndex {
